--- a/document_page/views/report_document_page.xml
+++ b/document_page/views/report_document_page.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <odoo>
+
     <template id="report_documentpage_doc">
         <t t-call="web.external_layout">
             <div class="page">
@@ -8,6 +9,7 @@
             </div>
         </t>
     </template>
+
     <template id="report_documentpage">
         <t t-call="web.html_container">
             <t t-foreach="docs" t-as="doc">
@@ -15,12 +17,15 @@
             </t>
         </t>
     </template>
-    <report
-        id="report_document_page"
-        string="Document Page"
-        model="document.page"
-        report_type="qweb-pdf"
-        file="document_page.report_documentpage"
-        name="document_page.report_documentpage"
-    />
+
+    <record id="report_document_page" model="ir.actions.report">
+        <field name="name">Document Page</field>
+        <field name="model">document.page</field>
+        <field name="report_type">qweb-pdf</field>
+        <field name="report_name">document_page.report_documentpage</field>
+        <field name="report_file">document_page.report_documentpage</field>
+        <field name="binding_type">report</field>
+        <field name="binding_model_id" ref="model_document_page" />
+    </record>
+
 </odoo>
