--- a/document_page/wizard/document_page_show_diff.xml
+++ b/document_page/wizard/document_page_show_diff.xml
@@ -5,7 +5,7 @@
         <field name="name">Show Difference</field>
         <field name="model">wizard.document.page.history.show_diff</field>
         <field name="arch" type="xml">
-            <form string="Difference" version="7.0">
+            <form string="Difference">
                 <field name="diff" widget="html" class="overflow-x: scroll" />
                 <footer>
                     <button string="Close" class="oe_link" special="cancel" />
@@ -13,13 +13,16 @@
             </form>
         </field>
     </record>
-    <!-- Create Index Action Window  -->
-    <act_window
-        id="action_view_wiki_show_diff_values"
-        name="Difference"
-        res_model="wizard.document.page.history.show_diff"
-        binding_model="document.page.history"
-        view_mode="form"
-        target="new"
-    />
+
+    <record model="ir.actions.act_window" id="action_view_wiki_show_diff_values">
+        <field name="name">Difference</field>
+        <field name="res_model">wizard.document.page.history.show_diff</field>
+        <field name="view_mode">form</field>
+        <field name="target">new</field>
+        <field
+            name="binding_model_id"
+            ref="document_page.model_document_page_history"
+        />
+    </record>
+
 </odoo>
